modules/compute/security_groups_lb_training/02-alb_sg.tf
locals {
  http_port    = 80
  any_port     = 0
  any_protocol = "-1"
  tcp_protocol = "tcp"
  all_ips      = ["0.0.0.0/0"]
}

resource "aws_security_group" "alb" {
  name        = "${var.name} ALB"
  description = "${var.name} ALB security group"
  vpc_id      = var.vpc_id

  tags = merge(
    {
      Name = "${var.name} ALB"
    },
    var.tags
  )
}

resource "aws_security_group_rule" "alb_sg_allow_http_inbound" {
  type              = "ingress"
  security_group_id = aws_security_group.alb.id

  from_port   = local.http_port
  to_port     = local.http_port
  protocol    = local.tcp_protocol
  cidr_blocks = local.all_ips
}

resource "aws_security_group_rule" "alb_sg_allow_all_outbound" {
  type              = "egress"
  security_group_id = aws_security_group.alb.id

  from_port   = local.any_port
  to_port     = local.any_port
  protocol    = local.any_protocol
  cidr_blocks = local.all_ips
}
